feat: add spark analytics feature and disable high-memory puzzle analysis by default